Moved IEnviroment to src

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,8 +67,8 @@ set(SRC_THE_GAME_OF_PONG
     src/TheGameOfPong/Scoreboard.cpp
     src/TheGameOfPong/GameEngine.cpp
     src/TheGameOfPong/TheGameOfPong.cpp
-    src/TheGameOfPong/IEnviroment.cpp
     src/Math/Matrix.cpp
+	src/IEnviroment.cpp
     src/main.cpp
 )
 
