Added unit testing for matrix library Added dependency boost.test_1.75 Fixed bugs in matrix library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(Pong-RL
     HOMEPAGE_URL "https://github.com/Retr0-code/Pong-RL"
 )
 
+include(CTest)
+
 set(INSTALL_PREFIX /usr/local/bin CACHE PATH "Path for installed binaries")
 set(BUILD_ARCH "amd64" CACHE STRING "Build architecture amd64/i386")
 set(BUILD_CPU "RELEASE" CACHE STRING "Build target mode RELEASE/DEBUG")
@@ -71,6 +73,11 @@ set(SRC_THE_GAME_OF_PONG
 	src/IEnviroment.cpp
     src/main.cpp
 )
+
+enable_testing()
+add_executable(TestInstantiator src/Math/Matrix.cpp tests/MatrixTests.cpp)
+target_link_libraries(TestInstantiator boost_unit_test_framework)
+add_test(NAME TestInstantiator COMMAND TestInstantiator --log_level=all)
 
 add_executable(${PROJECT_NAME} ${SRC_THE_GAME_OF_PONG})
 target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
