Added FunctionContext declaration Added FunctionContext tests prep

--- a/src/Math/CMakeLists.txt
+++ b/src/Math/CMakeLists.txt
@@ -2,6 +2,7 @@ project(LibMath)
 
 add_library(${PROJECT_NAME} STATIC 
     Matrix.cpp
+    FunctionContext.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${Pong-RL_SOURCE_DIR}/include/Math)
