--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(INSTALL_PREFIX /usr/local/bin CACHE PATH "Path for installed binaries")
 set(BUILD_ARCH "amd64" CACHE STRING "Build architecture amd64/i386")
 set(BUILD_CPU "RELEASE" CACHE STRING "Build target mode RELEASE/DEBUG")
 
-set (CMAKE_CXX_STANDARD 17)
+set (CMAKE_CXX_STANDARD 20)
 
 # Setting install prefix
 set(CMAKE_INSTALL_PREFIX ${INSTALL_PREFIX})
@@ -61,7 +61,7 @@ endif()
 set(BUILD_SHARED_LIBS OFF)
 
 set(SRC_MAIN
-	src/IEnviroment.cpp
+	src/EnviromentPong.cpp
     src/AgentUCB.cpp
     src/PlayerUCB.cpp
     src/main.cpp
