--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ endif()
 set(BUILD_SHARED_LIBS OFF)
 
 set(SRC_MAIN
-	src/EnviromentPong.cpp
+	src/EnvironmentPong.cpp
     src/AgentUCB.cpp
     src/PlayerUCB.cpp
     src/AgentLogger.cpp
